--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,17 @@
-title: Minimal theme
+title: <p align="center"> Raj Gaurav Srivastava </p>
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+
+description:
+  <p align="center">
+  <a href="pdf/resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/raj-gaurav-srivastava/">LinkedIn</a> |
+  <a href="https://github.com/rajgaurav">GitHub</a>
+  
+  <br>   
+  I am working as Senior Machine Learning Engineer. Currently exploring NLP.
+  <br>
+  </p>
+
+
+
 theme: jekyll-theme-minimal
