--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,9 @@ description:
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/raj-gaurav-srivastava/">LinkedIn</a> |
-  <a href="https://github.com/rajgaurav">GitHub</a>
+  <a href="https://github.com/Raj-Gaurav-Srivastava">GitHub</a>
+  <a href="https://github.com/RajTechcafe">GitHub</a>
+  
   
   <br>   
   I am working as Senior Machine Learning Engineer. Currently exploring NLP.
